@@ -5,6 +5,9 @@
 	.arm
 foo:
 	sevl
+	hlt 0x0
+	hlt 0xf
+	hlt 0xfff0
 
 	.thumb
 	.thumb_func
@@ -15,3 +18,5 @@ bar:
 	dcps1
 	dcps2
 	dcps3
+	hlt 0
+	hlt 63
